# sleipnir

./: .gitignore  .hgignore  CMakeLists.txt  INSTALL  LICENSE  Makefile.am  Makefile.in  README  README.developer  README.md  configure  configure.ac  configure.cygwin  configure.default  configure.incendio  configure.kai  configure.local  configure.ubuntu  gen_auto  gen_tools_am
src/: Makefile.am  Makefile.in  PclQuery.cpp  PclQuery.h  SeekPValue.cpp  SeekPValue.h  annotation.cpp  annotation.h  annotationi.h  annotationkegg.cpp  annotationmips.cpp  annotationobo.cpp  bayesnet.cpp  bayesnet.h  bayesnetfn.cpp  bayesnetfni.h  bayesneti.h  bayesnetint.h  bayesnetmixed.cpp  bayesnetpnl.cpp  bayesnetsmile.cpp  bayesnetsmileelr.cpp  clusthierarchical.cpp  clusthierarchical.h  clusthierarchicali.h  clustkmeans.cpp  clustkmeans.h  clustkmeansi.h  clustpivot.cpp  clustpivot.h  clustqtc.cpp  clustqtc.h  clustqtci.h  coalesce.cpp  coalesce.h  coalescebasei.h  coalescecluster.cpp  coalescecluster.h  coalesceclusteri.h  coalescei.h  (+125 more)
tests/: CMakeLists.txt  README  Readme.txt  example_add.cpp  example_subtract.cpp  make_bioinform_config.sh  pytestHelper.py  randomSeekRpcClient.py  runRandomClients.sh  run_all.sh  run_basic_query.sh  run_bioinform.sh  run_paramtest.sh  run_querysize.sh  sampleConfigFiles.h  seekerror_test.cpp  seekhelper_test.cpp  seekplatform_test.cpp  seekservice_test.cpp  test_new.py  test_new2.py  test_pclrpc.py  test_seekMiner.py  test_seekrpc.py
tests/bioinform_tests/: core_run.sh  create_bioinform_test.sh  make_bioinform_config.sh  run_all.sh  run_basic_query.sh  run_bioinform.sh  run_paramtest.sh  run_querysize.sh
tests/gold_standard_results/: bioinform_long_goldstandard.tgz  bioinform_medium_goldstandard.tgz  bioinform_tiny_goldstandard.tgz  seek_basic_query_goldstandard.tgz  seek_paramtest_goldstandard.tgz  seek_querysize_goldstandard.tgz
tests/pytools/: conda_environment.yml  create_bins.py  create_goldstd_files.py  create_plot1a_filelists.py  create_plot1c_filelists.py  create_queries.py  plot_seek1c.py  rank_correlation.py  sample_bioinform_config.toml  struct_dict.py  test_seek_bioinform.py  test_seek_params.py  test_seek_querysizes.py  utils.py
tests/ref/: gene_map.txt  genes.txt
tests/test_inputs/: README_test_creation  oneColTextFile.txt  pclTestGeneCoExpr.txt  pclTestGeneExpr.txt  pclTestQueryCoExpr.txt  pclTestQueryExpr.txt  twoColTextFile.txt
tools/: Makefile.am  verifyMergedDBFiles.cpp
tools/Answerer/: Answerer.cpp  Answerer.ggo  cmdline.c  cmdline.h  stdafx.cpp  stdafx.h
tools/BNConverter/: BNConverter.cpp  BNConverter.ggo  cmdline.c  cmdline.h  stdafx.cpp  stdafx.h
tools/BNCreator/: BNCreator.cpp  BNCreator.ggo  cmdline.c  cmdline.h  stdafx.cpp  stdafx.h
tools/BNEvaluator/: BNEvaluator.cpp  BNEvaluator.ggo  cmdline.c  cmdline.h  stdafx.cpp  stdafx.h
tools/BNFunc/: BNFunc.cpp  BNFunc.ggo  cmdline.c  cmdline.h  stdafx.cpp  stdafx.h
tools/BNServer/: BNServer.cpp  BNServer.ggo  BNServer.h  cmdline.c  cmdline.h  dot.cpp  dot.h  stdafx.cpp  stdafx.h
tools/BNTester/: BNTester.cpp  BNTester.ggo  cmdline.c  cmdline.h  stdafx.cpp  stdafx.h
tools/BNTruster/: BNTruster.cpp  cmdline.c  cmdline.h  stdafx.cpp  stdafx.h
tools/BNUnraveler/: BNUnraveler.cpp  BNUnraveler.ggo  cmdline.c  cmdline.h  stdafx.cpp  stdafx.h
tools/BNWeaver/: BNWeaver.cpp  BNWeaver.ggo  cmdline.c  cmdline.h  stdafx.cpp  stdafx.h
tools/BNs2Txt/: BNs2Txt.cpp  cmdline.c  cmdline.h  stdafx.h
tools/COALESCE/: COALESCE.cpp  COALESCE.ggo  cmdline.c  cmdline.h  stdafx.h
tools/Clinician/: Clinician.cpp  Clinician.ggo  cmdline.c  cmdline.h  stdafx.h
tools/Cliquer/: Cliquer.cpp  Cliquer.ggo  cmdline.c  cmdline.h  stdafx.cpp  stdafx.h
tools/Clusterer/: Clusterer.cpp  Clusterer.ggo  cmdline.c  cmdline.h  stdafx.cpp  stdafx.h
tools/Clusters2Dab/: Clusters2Dab.cpp  Clusters2Dab.ggo  cmdline.c  cmdline.h  stdafx.cpp  stdafx.h
tools/Combiner/: Combiner.cpp  Combiner.ggo  cmdline.c  cmdline.h  stdafx.cpp  stdafx.h
tools/Contexter/: Contexter.cpp  Contexter.ggo  cmdline.c  cmdline.h  stdafx.cpp  stdafx.h
tools/Counter/: Counter.cpp  Counter.ggo  cmdline.c  cmdline.h  stdafx.cpp  stdafx.h
tools/DBCombiner/: DBCombiner.cpp  DBCombiner.ggo  cmdline.c  cmdline.h  stdafx.cpp  stdafx.h
tools/DChecker/: DChecker.cpp  DChecker.ggo  cmdline.c  cmdline.h  stdafx.cpp  stdafx.h
tools/DSLConverter/: DSLConverter.cpp  DSLConverter.ggo  cmdline.c  cmdline.h  stdafx.cpp  stdafx.h
tools/Dab2Dad/: Dab2Dad.cpp  Dab2Dad.ggo  cmdline.c  cmdline.h  stdafx.cpp  stdafx.h
tools/Dat2Dab/: Dat2Dab.cpp  Dat2Dab.ggo  cmdline.c  cmdline.h  stdafx.cpp  stdafx.h
tools/Dat2Graph/: Dat2Graph.cpp  Dat2Graph.ggo  cmdline.c  cmdline.h  stdafx.cpp  stdafx.h
tools/Dat2PCL/: Dat2PCL.cpp  Dat2PCL.ggo  cmdline.c  cmdline.h  stdafx.h
tools/Data2Bnt/: Data2Bnt.cpp  Data2Bnt.ggo  cmdline.c  cmdline.h  stdafx.cpp  stdafx.h
tools/Data2DB/: Data2DB.cpp  Data2DB.ggo  cmdline.c  cmdline.h  stdafx.cpp  stdafx.h
tools/Data2Features/: Data2Features.cpp  Data2Features.ggo  cmdline.c  cmdline.h  stdafx.cpp  stdafx.h
tools/Data2Sql/: Data2Sql.cpp  Data2Sql.ggo  cmdline.c  cmdline.h  stdafx.cpp  stdafx.h
tools/Data2Svm/: Data2Svm.cpp  Data2Svm.ggo  cmdline.c  cmdline.h  stdafx.cpp  stdafx.h
tools/DataDumper/: DataDumper.cpp  DataDumper.ggo  cmdline.c  cmdline.h  stdafx.cpp  stdafx.h
tools/DataServer/: DataServer.cpp  DataServer.ggo  DataServer.h  cmdline.c  cmdline.h  stdafx.cpp  stdafx.h  test.py
tools/Distancer/: Distancer.cpp  Distancer.ggo  cmdline.c  cmdline.h  stdafx.cpp  stdafx.h
tools/Edges2Posteriors/: Edges2Posteriors.cpp  Edges2Posteriors.ggo  cmdline.c  cmdline.h  stdafx.cpp  stdafx.h
tools/Explainer/: Explainer.cpp  Explainer.ggo  cmdline.c  cmdline.h  stdafx.cpp  stdafx.h
tools/Filterer/: Filterer.cpp  cmdline.c  cmdline.h  stdafx.h
tools/Funcaeologist/: Funcaeologist.cpp  Funcaeologist.ggo  cmdline.c  cmdline.h  stdafx.cpp  stdafx.h
tools/Funcifier/: Funcifier.cpp  Funcifier.ggo  cmdline.c  cmdline.h  stdafx.cpp  stdafx.h
tools/Funcographer/: Funcographer.cpp  cmdline.c  (+4 more)
(+826 files in other folders)
